// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deployment_data_transformation_helper convertToDeploymentTableRow should be converted to proper table row data 1`] = `
{
  "actions": [
    {
      "name": "deploy-staging",
      "playPath": "https://gdk.test:3000/redeploy/play",
      "playable": true,
      "scheduledAt": "2023-01-17T11:02:41.369Z",
    },
  ],
  "commit": {
    "author": {
      "avatar_url": "/uploads/-/system/user/avatar/1/avatar.png",
      "path": "http://gdk.test:3000/root",
      "username": "Administrator",
    },
    "commitRef": {
      "name": "main",
    },
    "commitUrl": "http://gdk.test:3000/gitlab-org/pipelinestest/-/commit/0cb48dd5deddb7632fd7c3defb16075fc6c3ca74",
    "shortSha": "0cb48dd5",
    "tag": false,
    "title": "Update .gitlab-ci.yml file",
  },
  "created": "2022-10-17T07:44:17Z",
  "deploymentApproval": {
    "isApprovalActionAvailable": false,
  },
  "finished": "2022-10-17T07:44:43Z",
  "id": "31",
  "job": {
    "label": "deploy-prod (#860)",
    "webPath": "/gitlab-org/pipelinestest/-/jobs/860",
  },
  "rollback": {
    "id": "gid://gitlab/Deployment/76",
    "lastDeployment": {
      "commit": {
        "author": {
          "avatarUrl": "/uploads/-/system/user/avatar/1/avatar.png",
          "id": "gid://gitlab/User/1",
          "name": "Administrator",
          "webUrl": "http://gdk.test:3000/root",
        },
        "authorEmail": "admin@example.com",
        "authorGravatar": "https://www.gravatar.com/avatar/e64c7d89f26bd1972efa854d13d7dd61?s=80&d=identicon",
        "authorName": "Administrator",
        "id": "gid://gitlab/CommitPresenter/0cb48dd5deddb7632fd7c3defb16075fc6c3ca74",
        "message": "Update .gitlab-ci.yml file",
        "shortId": "0cb48dd5",
        "webUrl": "http://gdk.test:3000/gitlab-org/pipelinestest/-/commit/0cb48dd5deddb7632fd7c3defb16075fc6c3ca74",
      },
      "isLast": false,
    },
    "name": undefined,
    "retryUrl": "/gitlab-org/pipelinestest/-/jobs/860/retry",
  },
  "status": "success",
  "triggerer": {
    "avatarUrl": "/uploads/-/system/user/avatar/1/avatar.png",
    "id": "gid://gitlab/User/1",
    "name": "Administrator",
    "webUrl": "http://gdk.test:3000/root",
  },
  "webPath": "",
}
`;

exports[`deployment_data_transformation_helper convertToDeploymentTableRow should be converted to proper table row data 2`] = `
{
  "actions": [],
  "commit": {
    "author": {
      "avatar_url": "/uploads/-/system/user/avatar/1/avatar.png",
      "path": "http://gdk.test:3000/root",
      "username": "Administrator",
    },
    "commitRef": {
      "name": "main",
    },
    "commitUrl": "http://gdk.test:3000/gitlab-org/pipelinestest/-/commit/0cb48dd5deddb7632fd7c3defb16075fc6c3ca74",
    "shortSha": "0cb48dd5",
    "tag": false,
    "title": "Update .gitlab-ci.yml file",
  },
  "created": "2022-10-17T07:44:17Z",
  "deploymentApproval": {
    "isApprovalActionAvailable": false,
  },
  "finished": "2022-10-17T07:44:43Z",
  "id": "31",
  "job": undefined,
  "rollback": null,
  "status": "success",
  "triggerer": {
    "avatarUrl": "/uploads/-/system/user/avatar/1/avatar.png",
    "id": "gid://gitlab/User/1",
    "name": "Administrator",
    "webUrl": "http://gdk.test:3000/root",
  },
  "webPath": "",
}
`;

exports[`deployment_data_transformation_helper convertToDeploymentTableRow should be converted to proper table row data 3`] = `
{
  "actions": [],
  "commit": {
    "author": {
      "avatar_url": "/uploads/-/system/user/avatar/1/avatar.png",
      "path": "http://gdk.test:3000/root",
      "username": "Administrator",
    },
    "commitRef": {
      "name": "main",
    },
    "commitUrl": "http://gdk.test:3000/gitlab-org/pipelinestest/-/commit/0cb48dd5deddb7632fd7c3defb16075fc6c3ca74",
    "shortSha": "0cb48dd5",
    "tag": false,
    "title": "Update .gitlab-ci.yml file",
  },
  "created": "2022-10-17T07:44:17Z",
  "deploymentApproval": {
    "isApprovalActionAvailable": false,
  },
  "finished": "",
  "id": "31",
  "job": null,
  "rollback": null,
  "status": "success",
  "triggerer": {
    "avatarUrl": "/uploads/-/system/user/avatar/1/avatar.png",
    "id": "gid://gitlab/User/1",
    "name": "Administrator",
    "webUrl": "http://gdk.test:3000/root",
  },
  "webPath": "",
}
`;

exports[`deployment_data_transformation_helper getAuthorFromCommit should be properly converted 1`] = `
{
  "avatar_url": "/uploads/-/system/user/avatar/1/avatar.png",
  "path": "http://gdk.test:3000/root",
  "username": "Administrator",
}
`;

exports[`deployment_data_transformation_helper getAuthorFromCommit should be properly converted 2`] = `
{
  "avatar_url": "https://www.gravatar.com/avatar/91811aee1dec1b2655fa56f894e9e7c9?s=80&d=identicon",
  "path": "mailto:azubov@gitlab.com",
  "username": "Andrei Zubov",
}
`;

exports[`deployment_data_transformation_helper getCommitFromDeploymentNode should get correclty formatted commit object 1`] = `
{
  "author": {
    "avatar_url": "/uploads/-/system/user/avatar/1/avatar.png",
    "path": "http://gdk.test:3000/root",
    "username": "Administrator",
  },
  "commitRef": {
    "name": "main",
  },
  "commitUrl": "http://gdk.test:3000/gitlab-org/pipelinestest/-/commit/0cb48dd5deddb7632fd7c3defb16075fc6c3ca74",
  "shortSha": "0cb48dd5",
  "tag": false,
  "title": "Update .gitlab-ci.yml file",
}
`;
